-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 24
-
Component/s: hotspot
* For target hotspot_variant-server_libjvm_objs_macroAssembler_aarch64.o:
In file included from src/hotspot/share/nmt/memTag.hpp:28,
from src/hotspot/share/memory/allocation.hpp:29,
from src/hotspot/share/classfile/classLoaderData.hpp:28,
from src/hotspot/share/precompiled/precompiled.hpp:34:
src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp: In member function ‘MacroAssembler::KlassDecodeMode MacroAssembler::klass_decode_mode()’:
src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp:5308:46: error: ‘ceil_log2’ was not declared in this scope
5308 | const uint64_t range_mask = right_n_bits(ceil_log2(range));
| ^~~~~~~~~
In file included from src/hotspot/share/nmt/memTag.hpp:28,
from src/hotspot/share/memory/allocation.hpp:29,
from src/hotspot/share/classfile/classLoaderData.hpp:28,
from src/hotspot/share/precompiled/precompiled.hpp:34:
src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp: In member function ‘MacroAssembler::KlassDecodeMode MacroAssembler::klass_decode_mode()’:
src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp:5308:46: error: ‘ceil_log2’ was not declared in this scope
5308 | const uint64_t range_mask = right_n_bits(ceil_log2(range));
| ^~~~~~~~~
- relates to
-
JDK-8343699 [aarch64] Bug in MacroAssembler::klass_decode_mode()
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/ef8da284
-
Review(master)
openjdk/jdk/22578
-
Review(master)
openjdk/jdk/22579