8345591: [aarch64] macroAssembler_aarch64.cpp compile fails ceil_log2 not declared